# Data_Structures_and_Algorithm_Design

127_jump_training/: 2451780_2-3.cpp
50_pow(x,n)/: 2451780_2-2.cpp
Homework_1/215_The_k-th_Largest_Element_in_an_Array/: 2451780_2-4.cpp
Homework_1/46_permulations/: 2451780_2-1.cpp
Homework_1/932_beautiful_array/: 2451780_2-5.cpp
Homework_2/121/: 2451780_3-4.cpp
Homework_2/300/: 2451780_3-2.cpp
Homework_2/322/: 2451780_3-3.cpp
Homework_2/53/: 2451780_3-1.cpp
Homework_3/376/: 2451780_4-4.cpp
Homework_3/406/: 2451780_4-2.cpp
Homework_3/452/: 2451780_4-3.cpp
Homework_3/630/: 2451780_4-5.cpp
Homework_3/738/: 2451780_4-1.cpp
Homework_4/2065/: 2451780_5-2.cpp
Homework_4/679/: 2451780_5-5.cpp
Homework_4/79/: 2451780_5-1.cpp
Homework_4/86/: 2451780_5-3.cpp
Homework_4/93/: 2451780_5-4.cpp
Midterm_Major_Project/: .gitignore  2025-2026 期中大作业要求.docx  CMakeLists.txt  report.docx  ~$report.docx  题目讲解.md
Midterm_Major_Project/results/: mst_disconnected.out  mst_sample.out  partition_equal.out  partition_experiments.csv  partition_sample.out  partition_single.out  selection_by_k.csv  selection_by_n.csv  selection_k1.out  selection_kn.out  selection_sample.out
Midterm_Major_Project/scripts/: generate_report.py
Midterm_Major_Project/src/: mst.cpp  partition.cpp  selection.cpp
Midterm_Major_Project/tests/: mst_disconnected.txt  mst_sample.txt  partition_sample.txt  run_tests.sh  selection_k1.txt  selection_kn.txt  selection_sample.txt
